force-app/main/default/objects/ASF_Case_Field_Config__c/ASF_Case_Field_Config__c.object-meta.xml
<CustomObject>
    <label>Case Field Config</label>
    <nameField>
        <displayFormat>CFC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Field Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>