force-app/main/default/objects/ASF_Case_Field_Config__c/fields/ASF_Is_Cloneable__c.field-meta.xml
<CustomField>
    <fullName>ASF_Is_Cloneable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, indicates that the respective field value should be cloned when SR is cloned</description>
    <label>Is Cloneable?</label>
    <type>Checkbox</type>
</CustomField>