force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Case_Category_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Config__c</fullName>
    <formula>Case_Main_Config__r.CCC_External_Id__c</formula>
    <label>Case Category Config</label>
    <type>Text</type>
</CustomField>