force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Case_Main_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Main_Config__c</fullName>
    <label>Case Main Config</label>
    <referenceTo>ASF_Case_Category_Config__c</referenceTo>
    <relationshipLabel>Case Field Configs</relationshipLabel>
    <relationshipName>Case_Main_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>