force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Confirmation_LWC__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_LWC__c</fullName>
    <description>This field is used to open the Confirmation LWC on Click of Icon or Key Down.</description>
    <label>Confirmation LWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>