force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Confirmation_Required__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Required</label>
    <type>Checkbox</type>
</CustomField>