force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Controlling_Experssion__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Experssion__c</fullName>
    <label>Controlling Experssion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>