force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Controlling_field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_field__c</fullName>
    <label>Controlling field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>