force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Controlling_Formula__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Formula__c</fullName>
    <label>Controlling Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>