force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Controlling_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Picklist__c</fullName>
    <label>Controlling Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>