force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Default_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Type__c</fullName>
    <label>Default Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>