force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Field_External_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Field_External_Id_c__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Field_External_Id__c</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>