force-app/main/default/objects/ASF_Case_Field_Config__c/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>