force-app/main/default/objects/ASF_Case_Field_Config__c/fields/IsControllingField__c.field-meta.xml
<CustomField>
    <fullName>IsControllingField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Controlling Field</label>
    <type>Checkbox</type>
</CustomField>