force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <label>Mandatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>