force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Multi_Picklist_Max_Allowed_Values__c.field-meta.xml
<CustomField>
    <fullName>Multi_Picklist_Max_Allowed_Values__c</fullName>
    <label>Multi Picklist Max Allowed Values</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>