force-app/main/default/objects/ASF_Case_Field_Config__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <label>ReadOnly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>