force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Searchable_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searchable Picklist</label>
    <type>Checkbox</type>
</CustomField>