force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Sensitive_Field__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive Field</label>
    <type>Checkbox</type>
</CustomField>