force-app/main/default/objects/ASF_Case_Field_Config__c/fields/Use_Controlling_Formula__c.field-meta.xml
<CustomField>
    <fullName>Use_Controlling_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Controlling Formula</label>
    <type>Checkbox</type>
</CustomField>